--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,10 @@
   command = "npm run build"
   publish = "dist"
 
+[build.environment]
+  SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  SECRETS_SCAN_SMART_DETECTION_OMIT_VALUES = "ghp_"
