--- a/package.json
+++ b/package.json
@@ -10,36 +10,39 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "@tanstack/react-query": "^4.24.6",
-    "zustand": "^4.3.2",
-    "framer-motion": "^10.0.1",
-    "react-hook-form": "^7.43.1",
+    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^2.9.11",
-    "zod": "^3.20.6",
-    "recharts": "^2.5.0",
+    "@tanstack/react-query": "^4.24.6",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
-    "lucide-react": "^0.323.0",
-    "react-hot-toast": "^2.4.0",
     "date-fns": "^2.29.3",
-    "@headlessui/react": "^1.7.15"
+    "framer-motion": "^10.0.1",
+    "i18next": "^25.5.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.323.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-hot-toast": "^2.4.0",
+    "react-i18next": "^16.0.0",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.5.0",
+    "zod": "^3.20.6",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
-    "typescript": "^4.9.3",
-    "tailwindcss": "^3.2.7",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4"
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
